	ADDED - improved data-source picker in editor: option to aggregate data sources
	ADDED - SPLITPOS keyword to control position of midpoint in links
	FIXED - KEYOUTLINECOLOR is actually used now (thanks again to llow)
	FIXED - Editor doesn't throw away WIDTH and HEIGHT with no BG image
	FIXED - Data-source picker doesn't restrict scrolling or resizing anymore

0.941	FIXED - Issue with '-' DS names again.
	FIXED - Added extra code to help discourage browser caching.
	FIXED - Removed some extra chatty debugging code from poller_output.
	ADDED - Page titles are more useful in Cacti now

0.94    ADDED - INBWFORMAT and OUTBWFORMAT allow you to format the text for BWLABEL, same as for COMMENTs
        ADDED - New cactithold/cactimonitor data source plugin reads data from Cacti's Threshold plugin.
                (Original development for this plugin was paid for by Stellar Consulting - Thanks!)
        ADDED - New LINKSTYLE command allows you to have one-way (one arrow) links.
        ADDED - RRD DS can use Cacti's poller_output to get data without running RRDtool at all.
                (this also means it can work with the Boost plugin for large installations)
                See targets.html for more info on this one.
        ADDED - Editor - Align horizontal and Align-vertical for links. Calculates link offsets to make link vertical/horizontal.
	CHANGE - Finally a better tab image, and a red 'active' one too, for the Cacti plugin.
	FIXED - "Full Screen Maps" mode in Cacti Plugin was broken by me adding the "View Only First" mode.
	FIXED - Imagemaps for horiz/vert format legend were wrong in editor (thanks to Alex Moura for pointing this out)
	FIXED - Changes for compatibility with Cacti 0.8.7's moved config file.
		                
0.93    Added - weathermap-cacti-plugin.php?action=viewmap&id=mapfilename  works as well as a map number - useful for crosslinks
        FIXED - the key_hidezero secret setting hides the zero in a gradient in a classic scale too.